--- a/package.json
+++ b/package.json
@@ -40,7 +40,9 @@
     "chai": "^3.4.1",
     "jshint": "^2.8.0",
     "jspm": "^0.16.15",
-    "mocha": "^2.3.4"
+    "mocha": "^2.3.4",
+    "sinon": "^1.17.2",
+    "sinon-chai": "^2.8.0"
   },
   "jspm": {
     "devDependencies": {
