- adjusted jspm settings to easily require components from the libraries

--- a/package.json
+++ b/package.json
@@ -45,6 +45,10 @@
     "sinon-chai": "^2.8.0"
   },
   "jspm": {
+    "name": "nel/io",
+    "directories": {
+      "lib": "src/nel/io"
+    },
     "devDependencies": {
       "babel": "npm:babel-core@^5.8.24",
       "babel-runtime": "npm:babel-runtime@^5.8.24",
