--- a/package.json
+++ b/package.json
@@ -24,13 +24,7 @@
       "email": "tobias.peters@kreativeffekt.at"
     }
   ],
-  "license": "MIT",
-  "licenses": [
-    {
-      "type": "MIT",
-      "url": "https://github.com/zerotacg/nel-io/blob/master/LICENSE"
-    }
-  ],
+  "license": "AGPL-3.0",
   "bugs": {
     "url": "https://github.com/zerotacg/nel-io/issues"
   },
@@ -46,6 +40,7 @@
   },
   "jspm": {
     "name": "nel/io",
+    "version": "master",
     "directories": {
       "lib": "src/nel/io"
     },
